[gd_scene load_steps=2 format=3 uid="uid://hi8ye1uk38ff"]

[ext_resource type="Script" path="res://Scenes/options_ui.gd" id="1_d3sea"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d3sea")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.470588, 0.972549, 1)

[node name="CenterContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_right = 400.0
offset_bottom = 221.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)

[node name="Options" type="Label" parent="CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"HeaderWindow"
text = "Options"

[node name="Spacer1" type="Control" parent="CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="MusicVolumeText" type="Label" parent="CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"HeaderOption"
text = "Music Volume"

[node name="MusicVolume" type="HSlider" parent="CenterContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
min_value = -40.0
max_value = 10.0

[node name="EffectVolumeText" type="Label" parent="CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"HeaderOption"
text = "SFX Volume
"

[node name="EffectVolume" type="HSlider" parent="CenterContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
min_value = -40.0
max_value = 10.0

[node name="Fullscreen" type="CheckBox" parent="CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Fullscreen"

[node name="Exit" type="Button" parent="CenterContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
size_flags_stretch_ratio = 0.3
text = "Exit"

[node name="Spacer2" type="Control" parent="CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[connection signal="value_changed" from="CenterContainer/MusicVolume" to="." method="_on_music_volume_value_changed"]
[connection signal="value_changed" from="CenterContainer/EffectVolume" to="." method="_on_effect_volume_value_changed"]
[connection signal="toggled" from="CenterContainer/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="pressed" from="CenterContainer/Exit" to="." method="_on_exit_pressed"]
